--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -8,6 +8,13 @@
   </head>
   <body>
     <div id="root"></div>
+    <audio id="audio" pause loop>
+      <source
+        src="public//bgmusiccherryontop.mp3"
+        type="audio/mpeg"
+        id="audio"
+      />
+    </audio>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
